<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CookBook</string>
    <string name="default_web_client_id">Default Web Client Id</string>
    <string name="welcome_message">Welcome to CookBook Home!</string>
    <string name="featured_recipes">Featured Recipes</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_unit">Select Unit Preference</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="placeholder" translatable="false"></string>
    <string name="add_ingredients_to_shopping_list">Add Ingredients to Shopping List</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="welcome_to_cookbook">Welcome to CookBook</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="my_favorite_recipes">My Favorite Recipes</string>
    <string name="clear_all_favorites">Clear All Favorites</string>
    <string name="welcome_back_chef">Welcome back, Chef 👋</string>
    <string name="discover_your_next_favorite_recipe_today">Discover your next favorite recipe today!</string>
    <string name="search_recipes">Search recipes…</string>
    <string name="fresh_greens_with_chicken">Fresh greens with chicken</string>
    <string name="categories">🍴 Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dessert">Dessert</string>
    <string name="ready_to_cook_something_amazing">🍲 Ready to cook something amazing?</string>
    <string name="chicken_salad">Chicken Salad</string>
    <string name="classic_italian_dish">Classic Italian dish</string>
    <string name="all_recipes">All Recipes</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="logout">Logout</string>
    <string name="your_shopping_list">Your Shopping List</string>
    <string name="add_shopping_item">Add shopping item</string>
    <string name="add_item">Add Item</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions_preview">Instructions preview…</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="home">Home</string>
    <string name="recipes">Recipes</string>
    <string name="shopping">Shopping</string>
    <string name="display_options">Display Options</string>
    <string name="notifications">Notifications</string>
    <string name="measurement_units_label">Measurements Units</string>
    <string name="language_label">Language</string>
    <string name="logout_button_desc">Logout</string>
    <string name="settings_toolbar_desc">Settings Toolbar</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="logged_out">You have been logged out</string>
    <string name="English">English</string>
    <string name="Zulu">Zulu</string>

    <string-array name="measurement_units">
        <item>Metric (grams, liters)</item>
        <item>Imperial (cups, ounces)</item>
    </string-array>
</resources>