<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="?android:attr/colorActivatedHighlight"
            android:text="@string/login"
            android:textAllCaps="false"
            android:padding="12dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_google"
            android:layout_marginBottom="5dp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:backgroundTint="?android:attr/colorActivatedHighlight"
            android:text="@string/login_with_google" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#FF5722" />

    </LinearLayout>
</ScrollView>