<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <!-- Top toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:attr/colorActivatedHighlight"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="CookBook" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"  />

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            android:text="@string/enable_dark_mode"
            android:textSize="18sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:text="@string/enable_notifications"
            android:textSize="18sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Spinner
            android:id="@+id/spinnerUnits"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="190dp"
            android:entries="@array/measurement_units" />

        <Button
            android:id="@+id/btnLogout"
            android:text="@string/logout"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF5252"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>